--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "sfscm",
   "publisher": "dev1",
-  "displayName": "sfscm",
+  "displayName": "SFMerge",
+  "description": "Merging for Lightning Web Components in a sandbox environment",
   "repository": {
     "type": "git",
     "url": "https://github.com/slapperjoe/sfscm.git"
   },
-  "description": "",
-  "version": "0.0.5",
+  "preview": true,  
+  "icon": "media/icons/dev1.png",
+  "galleryBanner": {
+    "color": "#F2EEE4",
+    "theme": "light"
+  },
+  "pricing": "Free",
+  "version": "0.0.7",
   "engines": {
     "vscode": "^1.82.0"
   },
@@ -70,7 +77,7 @@
       "explorer": [
         {
           "id": "sfConflicts",
-          "name": "SF Files to Retrieve"
+          "name": "SF File Monitor"
         }
       ]
     },
@@ -115,10 +122,15 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/vscode": "^1.82.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/eslint-plugin-tslint": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"del": "^6.0.0",
+		"eslint": "^8.34.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsdoc": "^40.0.0",
+		"eslint-plugin-l13": "file:plugins/eslint-plugin-l13",
     "@vscode/test-electron": "^2.3.4",
-    "eslint": "^8.47.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
     "ts-loader": "^9.4.4",
